Some additional doc, renaming